--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,17 @@ pool:
 variables:
   buildConfiguration: 'Release'
 
+
+- task: SonarCloudPrepare@1
+  inputs:
+    SonarCloud: 'SonarCloud'
+    organization: 'mikeo7-github'
+    scannerMode: 'MSBuild'
+    projectKey: 'MikeO7.pipelines-dotnet-core'
+    projectName: 'MikeO7.pipelines-dotnet-core'
+
 steps:
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
+
+- task: SonarCloudAnalyze@1
