--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,21 @@ pool:
 variables:
   buildConfiguration: 'Release'
 
+
 steps:
+- task: SonarCloudPrepare@1
+  inputs:
+    SonarCloud: 'SonarCloud'
+    organization: 'mikeo7-github'
+    scannerMode: 'MSBuild'
+    projectKey: 'test'
+    projectName: 'dotnetcustom'
+
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
+
+- task: SonarCloudAnalyze@1
+
+- task: SonarCloudPublish@1
+  inputs:
+    pollingTimeoutSec: '300'
