--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,14 +13,12 @@ variables:
   buildConfiguration: 'Release'
 
 
-steps:
 - task: SonarCloudPrepare@1
   inputs:
     SonarCloud: 'SonarCloud'
     organization: 'mikeo7-github'
-    scannerMode: 'MSBuild'
-    projectKey: 'test'
-    projectName: 'dotnetcustom'
+    scannerMode: 'CLI'
+    configMode: 'file'
 
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
